fix .container on firefox

--- a/src/styles/final.scss
+++ b/src/styles/final.scss
@@ -21,7 +21,27 @@ body {
 
 @-moz-document url-prefix() {
   .container {
-    max-width: 1000px;
+    width: 100%;
+
+    @media (min-width: 640px) {
+      max-width: 640px;
+    }
+
+    @media (min-width: 768px) {
+      max-width: 768px;
+    }
+
+    @media (min-width: 1024px) {
+      max-width: 768px;
+    }
+
+    @media (min-width: 1280px) {
+      max-width: 1024px;
+    }
+
+    @media (min-width: 1536px) {
+      max-width: 1280px;
+    }
   }
 }
 
